Restored numberTheoremsWithin option

--- a/src/templates/environments.tex
+++ b/src/templates/environments.tex
@@ -254,7 +254,7 @@
 
     }{}
 
-    \numberwithin{equation}{section}
+    \numberwithin{equation}{\@numberTheoremsWithin}
 %{% if env_assertion %}
     \newaliascnt{assertion}{equation}
 %{% endif %}
