--- a/src/templates/internal.tex
+++ b/src/templates/internal.tex
@@ -112,16 +112,17 @@
 %% variables declarations
 %% ----------------------------------------
 
-\def\@bbStyle           {normal}
-\def\@bibliographyStyle {plain}
-\def\@chapterStyle      {normal}
-\def\@fontSet           {normal}
-\def\@headerFooterStyle {normal}
-\def\@language          {english}
-\def\@margins           {normal}
-\def\@scriptStyle       {normal}
-\def\@titlePageStyle    {normal}
-\def\@categoryStyle     {script}
+\def\@bbStyle               {normal}
+\def\@bibliographyStyle     {plain}
+\def\@chapterStyle          {normal}
+\def\@fontSet               {normal}
+\def\@headerFooterStyle     {normal}
+\def\@language              {english}
+\def\@margins               {normal}
+\def\@numberTheoremsWithin  {section}
+\def\@scriptStyle           {normal}
+\def\@titlePageStyle        {normal}
+\def\@categoryStyle         {script}
 
 %% -----------------------------------------------------------------------------
 %%
@@ -361,6 +362,13 @@
 % opt margins: Sets the margins. Supports \texttt{normal} (default), \texttt{reduced}, and \texttt{minimal}.
 \define@key{%{{ package_name %}}}{margins}[normal]{
     \def\@margins{#1}
+}
+
+%% numberTheoremsWithin
+% opt numberTheoremsWithin: Any counter, defaults to \texttt{section}.
+\define@key{kappak}{numberTheoremsWithin}[section]{
+    % int @numberTheoremsWithin:
+    \def\@numberTheoremsWithin{#1}
 }
 
 %% scriptStyle
