--- a/src/templates/tikz.tex
+++ b/src/templates/tikz.tex
@@ -135,8 +135,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \\
-                #3 \@ampersand #4 \\
+                {#1} \@ampersand {#2} \\
+                {#3} \@ampersand {#4} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$\scriptstyle{#5}$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$\scriptstyle{#6}$} (m-2-1);
@@ -159,8 +159,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \\
-                #3 \@ampersand #4 \\
+                {#1} \@ampersand {#2} \\
+                {#3} \@ampersand {#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [very near end] {$\ulcorner$} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$\scriptstyle{#5}$} (m-1-2);
@@ -184,8 +184,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \\
-                #3 \@ampersand #4 \\
+                {#1} \@ampersand {#2} \\
+                {#3} \@ampersand {#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [very near start] {$\lrcorner$} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$\scriptstyle{#5}$} (m-1-2);
@@ -209,8 +209,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \\
-                #3 \@ampersand \\
+                {#1} \@ampersand {#2} \\
+                {#3} \@ampersand      \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$\scriptstyle{#4}$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]        {$\scriptstyle{#5}$} (m-2-1);
@@ -232,8 +232,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \\
-                \@ampersand #3 \\
+                {#1} \@ampersand {#2} \\
+                     \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]      {$\scriptstyle{#4}$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left] {$\scriptstyle{#5}$} (m-2-2);
@@ -255,8 +255,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand \\
-                #2 \@ampersand #3 \\
+                {#1} \@ampersand      \\
+                {#2} \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$\scriptstyle{#4}$} (m-2-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$\scriptstyle{#5}$} (m-2-2);
@@ -278,8 +278,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                \@ampersand #1 \\
-                #2 \@ampersand #3 \\
+                     \@ampersand {#1} \\
+                {#2} \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$\scriptstyle{#4}$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$\scriptstyle{#5}$} (m-2-2);
@@ -301,8 +301,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                \@ampersand #1 \@ampersand \\
-                #2 \@ampersand \@ampersand #3 \\
+                     \@ampersand {#1} \@ampersand      \\
+                {#2} \@ampersand      \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-1-2) edge [\@diagLA] node [above left]  {$\scriptstyle{#4}$} (m-2-1);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [above right] {$\scriptstyle{#5}$} (m-2-3);
@@ -323,9 +323,9 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                \@ampersand #1 \\
-                #2 \@ampersand \\
-                \@ampersand #3 \\
+                     \@ampersand {#1} \\
+                {#2} \@ampersand      \\
+                     \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$\scriptstyle{#4}$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$\scriptstyle{#5}$} (m-3-2);
@@ -347,9 +347,9 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand \\
-                \@ampersand #2 \\
-                #3 \@ampersand \\
+                {#1} \@ampersand      \\
+                     \@ampersand {#2} \\
+                {#3} \@ampersand      \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$\scriptstyle{#4}$} (m-3-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$\scriptstyle{#5}$} (m-2-2);
@@ -371,8 +371,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand \@ampersand #2 \\
-                \@ampersand #3 \@ampersand \\
+                {#1} \@ampersand      \@ampersand {#2} \\
+                     \@ampersand {#3} \@ampersand      \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$\scriptstyle{#4}$} (m-1-3);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left]  {$\scriptstyle{#5}$} (m-2-2);
@@ -394,7 +394,7 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \@ampersand #3 \\
+                {#1} \@ampersand {#2} \@ampersand {#3} \\
             };
             \path [\@diagAA] (m-1-1)                    edge [\@diagLA] node [above] {$\scriptstyle{#4}$} (m-1-2);
             \path [\@diagAB] ($(m-1-2.east) + (0,0.1)$) edge [\@diagLB] node [above] {$\scriptstyle{#5}$} ($(m-1-3.west) + (0,0.1)$);
@@ -416,7 +416,7 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \@ampersand] {
-                #1 \@ampersand #2 \@ampersand #3 \\
+                {#1} \@ampersand {#2} \@ampersand {#3} \\
             };
             \path [\@diagAA] ($(m-1-1.east) + (0,0.1)$) edge [\@diagLA] node [above] {$\scriptstyle{#4}$} ($(m-1-2.west) + (0,0.1)$);
             \path [\@diagAB] ($(m-1-1.east) - (0,0.1)$) edge [\@diagLB] node [below] {$\scriptstyle{#5}$} ($(m-1-2.west) - (0,0.1)$);
