--- a/src/templates/environments.tex
+++ b/src/templates/environments.tex
@@ -4,6 +4,8 @@
 %%
 %% -----------------------------------------------------------------------------
 
+%{% if pkg_amsthm %}
+
 \ifthenelse{\boolean{@b_maths_use_theoremEnvs}}{
 
     \ifthenelse{\equal{\@language}{english}}{
@@ -721,3 +723,5 @@
 %{% endif %}
 
 }{}
+
+%{% endif %}
